# blobhttp

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  pyproject.toml
.forgejo/workflows/: build-and-publish.yml
.github/workflows/: ci.yml
docs/: TODO-enterprise.md  design-notes-http-layering.md  design-review-v0.md  dev-setup.md
duckdb_ext/src/: bhttp_ext.cpp  bhttp_functions.cpp  bhttp_llm.cpp  bhttp_llm.hpp  bhttp_llm_adapt.cpp  bhttp_llm_adapt.hpp
ext/duckdb/: CMakeLists.txt  duckdb_capi  pyproject.toml  test_extension.py
ext/duckdb/blobhttp_duckdb/: __init__.py
ext/sqlite/: CMakeLists.txt  pyproject.toml  test_extension.py
ext/sqlite/blobhttp_sqlite/: __init__.py
sql/: http_config.sql  http_config_helpers.sql  http_verbs.sql  llm_adapt.sql  llm_complete.sql
sqlite_ext/src/: bhttp_sqlite.cpp
src/: http_functions.cpp
src/include/: http_config.hpp
test/: flask_negotiate_server.py  test_integration.py  test_ratelimit.py
test/sql/: http_client.test  http_client_local.test  http_client_server.test
