[project]
name = "duckdb-http-enterprise-tests"
version = "0.0.0"
description = "Test dependencies for duckdb-http-client extension"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.4.3",
    "flask>=3.0",
    "pytest>=8.0",
    "duckdb-sqllogictest @ git+https://github.com/duckdb/duckdb-sqllogictest-python@0a936de0669a6ab7c78c8d1fbd4f57b251bfaa55",
]
