[build-system]
requires = ["scikit-build-core>=0.5"]
build-backend = "scikit_build_core.build"

[project]
name = "blobhttp-duckdb"
version = "0.1.0"
description = "HTTP requests and LLM integration as SQL functions — Duckdb extension"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Paul Harrington"}]
dependencies = []

[tool.scikit-build]
wheel.packages = ["blobhttp_duckdb"]
sdist.include = ["src/**", "include/**", "duckdb_ext/**", "duckdb_capi/**", "sql/**", "cmake/**"]
